Optimisation changes (was soooo slow before)

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <head>
   <title>Jessie Beech</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Satisfy" rel="stylesheet">
 </head>
 <body>
 
@@ -19,7 +20,7 @@
       <p><span>2012 - 2015</span> At university I studied Natural Sciences focusing
          on animals and their ecology and behaviour.</p>
       <p>My favourite animal is the European Pine Marten.</p>
-      <img alt="Cute pine marten" src="img/pinemarten.jpg" class="rounded-img marten">
+      <img alt="Cute pine marten" src="img/pinemarten-min.jpg" class="rounded-img marten">
     </div>
     <div class="block R lion"><img></div>
   </div>
@@ -44,7 +45,7 @@
           development techniques on treehouse (and now freeCodeCamp) since June.</p>
       <p>The thing that excites me most about Founders and Coders is the focus on
         JavaScript in the back end as well as the front end - it's the future!</p>
-      <img alt="FAC logo" src="img/found.png" class="rounded-img">
+      <img alt="FAC logo" src="img/found-min.png" class="rounded-img">
     </div>
     <div class="block R coding"><img></div>
   </div>
