--- a/index.html
+++ b/index.html
@@ -61,27 +61,27 @@
   </div>
   </div>
   <footer>
-    <h2 class="more">More of Me<h2>
+    <h1 class="more">More of Me</h1>
     <div class="links-container">
       <div class="rel"><a href="https://github.com/developess" target="_blank">
-        <img alt="github icon" src="icons/github.png">
+        <img class="grow" alt="github icon" src="icons/github.png">
       </a></div>
       <div class="rel"><a href="https://www.freecodecamp.org/developess" target="_blank">
-        <img alt="FCC icon" src="icons/fcc.png">
+        <img class="grow" alt="FCC icon" src="icons/fcc.png">
       </a></div>
       <div class="rel"><a href="https://www.codewars.com/users/developess" target="_blank">
-        <img alt="Codewars icon" src="icons/codewars.png">
+        <img class="grow" alt="Codewars icon" src="icons/codewars.png">
       </a></div>
       <div class="rel"><a href="https://teamtreehouse.com/jessicabeech" target="_blank">
-        <img alt="Treehouse icon" src="icons/treehouse.png">
+        <img class="grow" alt="Treehouse icon" src="icons/treehouse.png">
       </a></div>
       <div class="rel"><a href="https://www.linkedin.com/in/jessica-beech-wiser/" target="_blank">
-        <img alt="Linkedin icon" src="icons/linkedin.png">
+        <img class="grow" alt="Linkedin icon" src="icons/linkedin.png">
       </a></div>
       <div class="rel"><a href="http://www.imgrum.org/user/jessiebeech3/274653578" target="_blank">
-        <img alt="instagram icon" src="icons/instagram.png">
+        <img class="grow" alt="instagram icon" src="icons/instagram.png">
       </a></div>
     </div>
+    <p class="git-repo">To read the code behind this site on GitHub, <a href="https://github.com/developess/developess.github.io" target="_blank">click here.</a></p>
   </footer>
-
 </body>
