Slight wording changes in HTML and some spatial adjustments in media queries

--- a/index.html
+++ b/index.html
@@ -39,13 +39,11 @@
   <div class="blocks-container">
     <div class="Coding text-section">
       <img alt="javascript brackets icon" src="icons/monitor.png">
-      <p>I discovered web programming in June 2017 and realised it's actually the
-          best thing ever. It utilises my problem solving skills and creative
-          impulses and I'm totally addicted. I have been learning front end
-          development techniques on treehouse (and now freeCodeCamp) since June.</p>
+      <p>I discovered web programming in June 2017 and truly found my passion! I have been learning front end
+          development techniques on treehouse (and now freeCodeCamp) since then.</p>
       <p>The thing that excites me most about Founders and Coders is the focus on
         JavaScript in the back end as well as the front end - it's the future!</p>
-      <img alt="FAC logo" src="img/found-min.png" class="rounded-img">
+      <img alt="FAC logo" src="img/found-min.png" class="rounded-img FAC">
     </div>
     <div class="block R coding"><img></div>
   </div>
